Some fixes for site.

--- a/site/index.html
+++ b/site/index.html
@@ -3910,7 +3910,7 @@
             </li>
             <li>
                 <a href="https://github.com/betsol/batch-webfont" target="_blank">
-                    GitHub repository
+                    GitHub Repository
                 </a>
             </li>
         </ul>
